添加主要功能的时序图，继续重构优化